cleaner web builds

--- a/web_source/templates/compact.html
+++ b/web_source/templates/compact.html
@@ -1,7 +1,7 @@
 {% extends "default.html" %}
 
 {% block header %}
-<h2>tambara.fun <img src="../assets/favicon.svg"
-                alt="the tambara.fun icon: an arrow pointing down and two arrows pointing up" style="width: 1ex;">
+<h2>tambara.fun <img src="/assets/favicon.svg"
+        alt="the tambara.fun icon: an arrow pointing down and two arrows pointing up" style="width: 1ex;">
 </h2>
 {% endblock %}
