--- a/web_source/templates/default.html
+++ b/web_source/templates/default.html
@@ -1,3 +1,4 @@
+{# The parent template for all pages. #}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,8 +9,8 @@
 
     <title>{% block title %}tambara.fun{% endblock %}</title>
 
-    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="stylesheet" href="/assets/style.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.27/dist/katex.min.css"
         integrity="sha384-Pu5+C18nP5dwykLJOhd2U4Xen7rjScHN/qusop27hdd2drI+lL5KvX7YntvT8yew" crossorigin="anonymous">
@@ -27,6 +28,8 @@
     <div class="container">
         <header>
             {% block header %}
+            <img src="/assets/favicon.svg" alt="the tambara.fun icon: an arrow pointing down and two arrows pointing up"
+                style="width: 1ex;">
             {% endblock %}
         </header>
 
