add groupnames links

--- a/web_source/templates/group.html
+++ b/web_source/templates/group.html
@@ -11,6 +11,7 @@
         <li><strong>Notated:</strong> \({{ latex_name }}\)</li>
         <li><strong>Order:</strong> {{ order }}</li>
         <li><strong>SmallGroup ID:</strong> ({{ order }}, {{ smallgroup_number }})</li>
+        <li><strong><a href="{{groupnames_link}}">More info at GroupNames</a></strong></li>
     </ul>
 </section>
 
